# daedalus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Daedalus.cht  Daedalus.cia  Daedalus.sln  Daedalus.vcproj  DaedalusPSP.vcproj  DaedalusW32.vcproj  DaedalusX64.sln  Makefile  Options.cmake  README.md  build_cia.sh  build_daedalus.bat  build_daedalus.sh  daedalus  daedalus.gyp  daedalus.sublime-project  dynarec_diff  issues.md  parse_romsold  roms.ini  svnversion.txt  vcpkg-configuration.json  vcpkg.json
Source/: .CMakeLists.txt.swp  BuildOptions.h  CMakeLists.txt  CMakeSettings.json  ConfigOptions.cpp  ConfigOptions.h  Endian.h  Options.cmake  PopStructPack.h  PushStructPack1.h  StdAfx.cpp  System.cpp  System.h  VersionNo.h  common.gypi  daedalus.gyp  gfxbugs.txt  imgui.ini  stdafx.h  svnversion.h
Source/Base/: Alignment.h  Assert.h  Macros.h  MathUtil.h  Path.h  Singleton.h  Types.h
Source/Config/: CMakeLists.txt  Config.gyp  ConfigOptions.cpp  ConfigOptions.h
Source/Core/: CMakeLists.txt  COP1Unstable_Jump.inl  CPU.cpp  CPU.h  Cheats.cpp  Cheats.h  DMA.cpp  DMA.h  Dynamo.cpp  Dynamo.h  FlashMem.cpp  FlashMem.h  FramerateLimiter.cpp  FramerateLimiter.h  HvqmTask.cpp  Interpret.cpp  Interpret.h  Interrupt.cpp  Interrupt.h  Interrupts.cpp  JpegTask.cpp  Memory.cpp  Memory.h  Memory_Read.inl  Memory_ReadInternal.inl  Memory_Write.inl  Memory_WriteValue.inl  N64Reg.h  PIF.cpp  PIF.h  PrintOpCode.cpp  R4300.cpp  R4300.h  R4300Instruction.h  R4300OpCode.h  R4300_Jump.inl  R4300i.cpp  RDRam.cpp  RDRam.h  ROM.cpp  (+21 more)
Source/Debug/: CMakeLists.txt  DBGConsole.h  DaedalusAssert.h  DebugConsoleImpl.cpp  DebugConsoleImpl.h  DebugLog.cpp  DebugLog.h  Dump.cpp  Dump.h  PrintOpCode.cpp  PrintOpCode.h  Registers.cpp  Registers.h  Synchroniser.cpp  Synchroniser.h  webby.cpp
Source/DynaRec/: AssemblyBuffer.h  AssemblyUtils.h  BranchType.cpp  BranchType.h  CMakeLists.txt  CodeBufferManager.h  CodeGenerator.h  DynaRecProfile.cpp  DynaRecProfile.h  Dynamo.cpp  Fragment.cpp  Fragment.h  FragmentCache.cpp  FragmentCache.h  IndirectExitMap.cpp  IndirectExitMap.h  N64RegisterCache.h  RegisterSpan.h  StaticAnalysis.cpp  StaticAnalysis.h  Trace.h  TraceRecorder.cpp  TraceRecorder.h
Source/Graphics/: CMakeLists.txt  ColourValue.cpp  ColourValue.h  GraphicsContext.h  HvqmTask.cpp  JpegTask.cpp  NativePixelFormat.h  NativeTexture.h  PngUtil.cpp  PngUtil.h  RE2TASK.cpp  TextureFormat.h  TextureTransform.cpp  TextureTransform.h
Source/HLEAudio/: ABI1.cpp  ABI2.cpp  ABI3.cpp  ABI3mp3.cpp  ABI_ADPCM.cpp  ABI_Buffers.cpp  ABI_Filters.cpp  ABI_MixerInterleave.cpp  ABI_Resample.cpp  ABI_interleave.cpp  AudioBuffer.cpp  AudioBuffer.h  AudioCode.h  AudioHLEProcessor.cpp  AudioHLEProcessor.h  AudioOutput.h  AudioPlugin.h  CMakeLists.txt  ENV_Mixer.cpp  HLEAudioInternal.h  HLEAudioState.cpp  HLEAudioState.h  HLEMain.cpp  audiohle.h
Source/HLEAudio copy/: ABI3mp3.cpp  ABI_ADPCM.cpp  ABI_Buffers.cpp  ABI_Filters.cpp  ABI_Resample.cpp  ABI_interleave.cpp  AudioBuffer.cpp  AudioHLEProcessor.cpp  ENV_Mixer.cpp
Source/HLEGraphics/: BaseRenderer.cpp  BaseRenderer.h  BlendModes.cpp  BlendModes.h  BlendModesnew.cpp  BlendModesold.cpp  Blender.cpp  Blender.h  CMakeLists.txt  CachedTexture.cpp  CachedTexture.h  ColourAdjuster.cpp  ColourAdjuster.h  ConvertFormats.h  ConvertImage.cpp  ConvertImage.h  ConvertTile.cpp  ConvertTile.h  DLDebug.cpp  DLDebug.h  DLParser.cpp  DLParser.h  DaedalusVtx.h  DebugDisplayList.h  DisplayListDebugger.cpp  DisplayListDebugger.h  GraphicsPlugin.h  Microcode.cpp  Microcode.h  N64PixelFormat.h  PSPRenderer.cpp  PSPRenderer.h  PixelFormatN64.h  RDP.cpp  RDP.h  RDPStateManager.cpp  RDPStateManager.h  TMEM.cpp  TMEM.h  Texture.cpp  (+12 more)
Source/Input/: CMakeLists.txt  InputManager.h
Source/Interface/: CMakeLists.txt  Cheats.cpp  ConfigOptions.cpp  GlobalPreferences.h  MainWindow.h  Preferences.cpp  Preferences.h  RomDB.cpp  RomDB.h  RomIndex.cpp  RomIndex.h  RomPreferences.h  SaveState.cpp  SaveState.h
Source/Localisation/: LanguageTable.cpp  LanguageTable.h  Localization.cpp  Localization.h
Source/Math/: CMakeLists.txt  Math.h  MathUtil.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
Source/OSHLE/: CMakeLists.txt  OS.cpp  OS.h  OSMesgQueue.h  OSTask.h  patch.cpp  patch.h  patch_ai_hle.inl  patch_cache_hle.inl  patch_eeprom_hle.inl  patch_gu_hle.inl  patch_math_hle.inl  patch_mesg_hle.inl  patch_pi_hle.inl  patch_regs_hle.inl  patch_si_hle.inl  patch_sp_hle.inl  patch_symbols.h  patch_symbols.inl  patch_thread_hle.inl  patch_timer_hle.inl  patch_tlb_hle.inl  patch_util_hle.inl  patch_vi_hle.inl  ultra_R4300.h  ultra_abi.h  ultra_gbi.h  ultra_mbi.h  ultra_os.h  ultra_rcp.h  ultra_sptask.h
Source/OSHLEold/: OSTask.h  patch.cpp  patch.h  patch_eeprom_hle.inl  patch_pi_hle.inl  patch_si_hle.inl  patch_sp_hle.inl  patch_timer_hle.inl  patch_tlb_hle.inl  patch_util_hle.inl  ultra_sptask.h
Source/Plugins/: AudioPlugin.h  GraphicsPlugin.cpp  GraphicsPlugin.h
Source/Pluginsd/: GraphicsPlugin.cpp
Source/Resources/: Script1.rc  Script1.rc2  resource.h
Source/RomFile/: CMakeLists.txt  ROMBuffer.cpp  ROMBuffer.h  RomFile.cpp  RomFile.h  RomFileCache.cpp  RomFileCache.h  RomFileCompressed.cpp  RomFileCompressed.h  RomFileMemory.cpp  RomFileMemory.h  RomFileUncompressed.cpp  RomFileUncompressed.h  RomSettings.cpp
Source/SysARM/: readme
Source/SysCTR/: CMakeLists.txt  main.cpp
Source/SysGL/: CMakeLists.txt  GL.h  SysGL.gyp
Source/SysGLES/: CMakeLists.txt  GL.h
Source/SysOSX/: main.cpp
Source/SysPS2/: main.cpp
Source/SysPSP/: .directory  CMakeLists.txt  UIContext.cpp  main.cpp
Source/SysPosix/: CMakeLists.txt  main.cpp
Source/SysW32/: CMakeLists.txt  main.cpp
Source/System/: AtomicPrimitives.h  CMakeLists.txt  CompressedStream.cpp  CompressedStream.h  Condition.h  DataSink.cpp  DataSink.h  Endian.h  IO.h  Mutex.h  Paths.cpp  Paths.h  SpinLock.h  System.cpp  SystemInit.cpp  SystemInit.h  Thread.cpp  Thread.h  Timing.cpp  Timing.h
Source/Test/: BatchTest.cpp  BatchTest.h  CMakeLists.txt
Source/UI/: AboutComponent.cpp  AboutComponent.h  Dialogs.cpp  (+46 more)
(+797 files in other folders)
